[package]
name = "cyberdyne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.30.3"
regex = "1.7.0"
prettytable-rs = "0.9.0"
#rusqlite = "0.28.0"
#libsqlite3-sys = "0.25.0"
chrono = "0.4.23"